--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </div>
 
   <button onclick="showReasons()">Открыть 40 причин 💖</button>
-  <div id="tapHint">Если музыка не включилась — нажми в любое место на странице 💗</div>
+  <div id="tapHint">💗</div>
 
   <div id="reasons"></div>
 
@@ -247,4 +247,5 @@
 
 </body>
 </html>
+
 
